# malebranche_client

./: .gitignore  .pre-commit-config.yaml  AUTHORS.md  HISTORY.md  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: python-tests.yml
docs/: Makefile  conf.py
malebranche/client/: __init__.py  exceptions.py  fabric.py  http_avro_handler.py  instance.py  logger.py  manager.py  memory.py  profiler.py  span.py
malebranche/client/importers/: __init__.py  system.py
malebranche/client/logger/: __init__.py  http_avro_handler.py  logger.py
malebranche/client/parsers/: __init__.py  abc.py  logger.py  system.py
tests/: test_instance.py  test_logger.py  test_memory.py  test_profiler.py  test_span.py  test_system.py
tests/test_logger/: test_logger.py
