[tool.poetry]
name = "malebranche_client"
version = "0.0.1"
description = "Malebranche client for remote Logs, Profiling."
readme = "README.md"
repository = "https://github.com/clariteia/malebranche_client"
homepage = "https://clariteia.com"
authors = ["Clariteia Devs <pypi@clariteia.com>"]
license = "MIT"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "clariteia",
    "malebranche",
    "tracing",
    "logs",
    "profiling",
]
packages = [
    { include = "malebranche" }
]
include = [
    "AUTHORS.md",
    "HISTORY.md",
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.9"
psutil = "^5.8.0"
fastavro = "^1.4.0"

[tool.poetry.dev-dependencies]
black = "^19.10b"
isort = "^5.8.0"
pytest = "^6.2.4"
coverage = "^5.5"
flake8 = "^3.9.2"
Sphinx = "^4.0.1"
pre-commit = "^2.12.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
